--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
             </li>
           </ul>
         </address>
+        <button class="mobile-menu-open-button" type="button">
+          <svg class="open-button-icon-mobile-menu" width="24" height="24">
+            <use href="./images/icons.svg#icon-mobile-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
@@ -134,6 +139,7 @@
             <li class="team-list-item">
               <img
                 src="./images/team/mark-guerrero.jpg"
+                srcset="./images/team/mark-guerrero@2x.jpg 2x"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -176,6 +182,7 @@
             <li class="team-list-item">
               <img
                 src="./images/team/tom-ford.jpg"
+                srcset="./images/team/tom-ford@2x.jpg 2x"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -218,6 +225,7 @@
             <li class="team-list-item">
               <img
                 src="./images/team/camila-garcia.jpg"
+                srcset="./images/team/camila-garcia@2x.jpg 2x"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -260,6 +268,7 @@
             <li class="team-list-item">
               <img
                 src="./images/team/daniel-wilson.jpg"
+                srcset="./images/team/daniel-wilson@2x.jpg 2x"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
@@ -310,13 +319,18 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
               <div class="portfilio-overlay">
-                <img
+                <picture>
+                  <source srcset="/images/portfolio/mobile/banking-app-mobile.jpg 1x, /images/portfolio/mobile/banking-app-mobile@2x.jpg 2x," media="(max-width: 767px)">
+                  <source srcset="/images/portfolio/tablet/banking-app-tablet.jpg 1x, /images/portfolio/tablet/banking-app-tablet@2x.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="/images/portfolio/desktop/banking-app-desktop.jpg 1x, /images/portfolio/desktop/banking-app-desktop@2x.jpg 2x" media="(max-width: 1158px)">
+                  <img
                   class="portfolio-list-image"
-                  src="./images/portfolio/banking-app.jpg"
+                  src="./images/portfolio/banking-app-mobile.jpg"
                   alt="banking app"
-                  width="360"
-                  height="300"
+                  width="288"
+                  height="280"
                 />
+              </picture>
                 <p class="portfilio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -332,13 +346,18 @@
 
             <li class="portfolio-list-item">
               <div class="portfilio-overlay">
+                <picture>
+                  <source srcset="/images/portfolio/mobile/cashless-payment-mobile.jpg 1x, /images/portfolio/mobile/cashless-payment-mobile@2x.jpg 2x," media="(max-width: 767px)">
+                  <source srcset="/images/portfolio/tablet/cashless-payment-tablet.jpg 1x, /images/portfolio/tablet/cashless-payment-tablet@2x.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="/images/portfolio/desktop/cashless-payment-desktop.jpg 1x, /images/portfolio/desktop/cashless-payment-desktop@2x.jpg 2x" media="(max-width: 1158px)">
                 <img
                   class="portfolio-list-image"
-                  src="./images/portfolio/cashless-payment.jpg"
+                  src="./images/portfolio/cashless-payment-mobile.jpg"
                   alt="cashless payment"
-                  width="360"
-                  height="300"
+                  width="288"
+                  height="280"
                 />
+              </picture>
                 <p class="portfilio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -353,13 +372,18 @@
 
             <li class="portfolio-list-item">
               <div class="portfilio-overlay">
+                <picture>
+                  <source srcset="/images/portfolio/mobile/meditation-app-mobile.jpg 1x, /images/portfolio/mobile/meditation-app-mobile@2x.jpg 2x," media="(max-width: 767px)">
+                  <source srcset="/images/portfolio/tablet/meditation-app-tablet.jpg 1x, /images/portfolio/tablet/meditation-app-tablet@2x.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="/images/portfolio/desktop/meditation-app-desktop.jpg 1x, /images/portfolio/desktop/meditation-app-desktop@2x.jpg 2x" media="(max-width: 1158px)">
                 <img
                   class="portfolio-list-image"
                   src="./images/portfolio/meditation-app.jpg"
                   alt="meditation app"
-                  width="360"
-                  height="300"
+                  width="288"
+                  height="280"
                 />
+              </picture>
                 <p class="portfilio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -374,13 +398,18 @@
 
             <li class="portfolio-list-item">
               <div class="portfilio-overlay">
+                <picture>
+                  <source srcset="/images/portfolio/mobile/taxi-service-mobile.jpg 1x, /images/portfolio/mobile/taxi-service-mobile@2x.jpg 2x," media="(max-width: 767px)">
+                  <source srcset="/images/portfolio/tablet/taxi-service-tablet.jpg 1x, /images/portfolio/tablet/taxi-service-tablet@2x.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="/images/portfolio/desktop/taxi-service-desktop.jpg 1x, /images/portfolio/desktop/taxi-service-desktop@2x.jpg 2x" media="(max-width: 1158px)">
                 <img
                   class="portfolio-list-image"
-                  src="./images/portfolio/taxi-service.jpg"
+                  src="./images/portfolio/taxi-service-mobile.jpg"
                   alt="taxi service"
-                  width="360"
-                  height="300"
+                  width="288"
+                  height="280"
                 />
+              </picture>
                 <p class="portfilio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -394,13 +423,18 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfilio-overlay">
+                <picture>
+                  <source srcset="/images/portfolio/mobile/screen-illustrations-mobile.jpg 1x, /images/portfolio/mobile/screen-illustrations-mobile@2x.jpg 2x," media="(max-width: 767px)">
+                  <source srcset="/images/portfolio/tablet/screen-illustrations-tablet.jpg 1x, /images/portfolio/tablet/screen-illustrations-tablet@2x.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="/images/portfolio/desktop/screen-illustrations-desktop.jpg 1x, /images/portfolio/desktop/screen-illustrations-desktop@2x.jpg 2x" media="(max-width: 1158px)">
                 <img
                   class="portfolio-list-image"
-                  src="./images/portfolio/screen-illustrations.jpg"
+                  src="./images/portfolio/screen-illustrations-mobile.jpg"
                   alt="screen illustrations"
-                  width="360"
-                  height="300"
+                  width="288"
+                  height="280"
                 />
+              </picture>
                 <p class="portfilio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -418,13 +452,18 @@
 
             <li class="portfolio-list-item">
               <div class="portfilio-overlay">
+                <picture>
+                  <source srcset="/images/portfolio/mobile/online-courses-mobile.jpg 1x, /images/portfolio/mobile/online-courses-mobile@2x.jpg 2x," media="(max-width: 767px)">
+                  <source srcset="/images/portfolio/tablet/online-courses-tablet.jpg 1x, /images/portfolio/tablet/online-courses-tablet@2x.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="/images/portfolio/desktop/online-courses-desktop.jpg 1x, /images/portfolio/desktop/online-courses-desktop@2x.jpg 2x" media="(max-width: 1158px)">
                 <img
                   class="portfolio-list-image"
-                  src="./images/portfolio/online-courses.jpg"
+                  src="./images/portfolio/online-courses-mobile.jpg"
                   alt="online courses"
-                  width="360"
-                  height="300"
+                  width="288"
+                  height="280"
                 />
+              </picture>
                 <p class="portfilio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -441,15 +480,16 @@
       </section>
     </main>
 
-
     <!-- Page Footer -->
 
     <footer class="page-footer">
       <div class="container page-footer-container">
         <div class="footer-text-container">
-          <a class="page-footer-logo" href="./index.html"
-            >Web<span class="page-footer-logo-studio">Studio</span></a
-          >
+          <div class="footer-logo-container">
+            <a class="page-footer-logo" href="./index.html"
+              >Web<span class="page-footer-logo-studio">Studio</span></a
+            >
+          </div>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
@@ -489,16 +529,15 @@
           </ul>
         </div>
         <div class="footer-form-container">
-          <p class="footer-form-title">
-            Subscribe
-          </p>
+          <p class="footer-form-title">Subscribe</p>
           <form class="footer-form">
             <label class="footer-form-label">
-              <input 
-              class="footer-form-input-email" 
-              name="footer-form-input-email" 
-              type="email"
-              placeholder="E-mail"/>
+              <input
+                class="footer-form-input-email"
+                name="footer-form-input-email"
+                type="email"
+                placeholder="E-mail"
+              />
             </label>
             <button type="submit" class="footer-form-submit-button">
               Subscribe
@@ -511,8 +550,7 @@
       </div>
     </footer>
 
-
- <!--- MODAL FORM --->
+    <!--- MODAL FORM --->
 
     <div class="modal-backdrop">
       <div class="modal">
@@ -525,74 +563,153 @@
           Leave your contacts and we will call you back
         </p>
         <form class="order-form">
-        <div class="order-form-field-wrapper">
-          <label class="order-form-field-label" for="user-name">Name</label>
-          <div class="order-form-icon-wrapper">
+          <div class="order-form-field-wrapper">
+            <label class="order-form-field-label" for="user-name">Name</label>
+            <div class="order-form-icon-wrapper">
+              <input
+                class="order-form-input"
+                type="text"
+                id="user-name"
+                name="user-name"
+                required
+              />
+              <svg class="order-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="order-form-field-wrapper">
+            <label class="order-form-field-label" for="user-phone">Phone</label>
+            <div class="order-form-icon-wrapper">
+              <input
+                class="order-form-input"
+                type="tel"
+                id="user-phone"
+                name="user-phone"
+              />
+              <svg class="order-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="order-form-field-wrapper">
+            <label class="order-form-field-label" for="user-email">Email</label>
+            <div class="order-form-icon-wrapper">
+              <input
+                class="order-form-input"
+                type="email"
+                id="user-email"
+                name="user-email"
+              />
+              <svg class="order-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="order-form-textarea-wrapper">
+            <label class="order-form-field-label" for="user-comment"
+              >Comment</label
+            >
+            <textarea
+              class="order-form-textarea-input"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="order-form-checkbox-wrapper">
             <input
-              class="order-form-input"
-              type="text"
-              id="user-name"
-              name="user-name"
+              class="order-form-input-checkbox visually-hidden"
+              type="checkbox"
+              id="user-privacy"
+              name="user-privacy"
+              value="true"
               required
             />
-            <svg class="order-form-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-person"></use>
-            </svg>
+            <label class="order-form-field-label-checkbox" for="user-privacy">
+              <span class="order-form-custom-checkbox">
+                <svg
+                  class="order-form-custom-checkbox-image"
+                  width="10"
+                  height="8"
+                >
+                  <use href="./images/icons.svg#icon-checked"></use>
+                </svg>
+              </span>
+              <p>
+              I accept the terms and conditions of the
+              <a href="" class="form-privacy-policy">Privacy Policy</a>
+            </p>
+            </label>
           </div>
-        </div>
-        <div class="order-form-field-wrapper">
-          <label class="order-form-field-label" for="user-phone">Phone</label>
-          <div class="order-form-icon-wrapper">
-            <input
-              class="order-form-input"
-              type="tel"
-              id="user-phone"
-              name="user-phone"
-            />
-            <svg class="order-form-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
-          </div>
-        </div>
-        <div class="order-form-field-wrapper">
-          <label class="order-form-field-label" for="user-email">Email</label>
-          <div class="order-form-icon-wrapper">
-            <input
-              class="order-form-input"
-              type="email"
-              id="user-email"
-              name="user-email"
-            />
-            <svg class="order-form-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
-          </div>
-        </div>
-        <div class="order-form-textarea-wrapper">
-          <label class="order-form-field-label" for="user-comment">Comment</label>
-          <textarea class="order-form-textarea-input" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
-        </div>
-        <div class="order-form-checkbox-wrapper">
-          <input
-            class="order-form-input-checkbox visually-hidden"
-            type="checkbox"
-            id="user-privacy"
-            name="user-privacy"
-            value="true"
-            required
-          />
-          <label class="order-form-field-label" for="user-privacy">
-          <span class="order-form-custom-checkbox">
-            <svg class="order-form-custom-checkbox-image" width="10" height="8">
-              <use href="./images/icons.svg#icon-checked"></use>
-            </svg>
-          </span>
-            I accept the terms and conditions of the
-            <a href="" class="form-privacy-policy">Privacy Policy</a>
-          </label>
-        </div>
-        <button class="order-form-button" type="submit">Send</button>
-      </form>
+          <button class="order-form-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+
+    <!--mobile-menu-->
+    <div class="mobile-menu">
+      <div class="container mobile-menu-container">
+        <button class="mobile-menu-close-button">
+          <svg class="mobile-menu-close-button-cross" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="mobile-menu-nav">
+          <ul class="mobile-menu-nav-list">
+            <li>
+              <a class="mobile-menu-link current" href="./index.html">Studio</a>
+            </li>
+            <li><a class="mobile-menu-link" href="">Portfolio</a></li>
+            <li><a class="mobile-menu-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="mobile-address-section">
+          <ul class="mobile-address-list">
+            <li>
+              <li>
+                <a class="mobile-address-list-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <a
+                class="mobile-address-list-link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+          <ul class="mobile-menu-links-list">
+            <li class="mobile-menu-links-list-item">
+              <a class="mobile-menu-list-link" href="">
+                <svg class="mobile-menu-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-links-list-item">
+              <a class="mobile-menu-list-link" href="">
+                <svg class="mobile-menu-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-links-list-item">
+              <a class="mobile-menu-list-link" href="">
+                <svg class="mobile-menu-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-links-list-item">
+              <a class="mobile-menu-list-link" href="">
+                <svg class="mobile-menu-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </address>
       </div>
     </div>
   </body>
