--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
             <li class="portfolio-list-item">
               <div class="portfilio-overlay">
                 <picture>
-                  <source srcset="/images/portfolio/mobile/banking-app-mobile.jpg 1x, /images/portfolio/mobile/banking-app-mobile@2x.jpg 2x," media="(max-width: 767px)">
-                  <source srcset="/images/portfolio/tablet/banking-app-tablet.jpg 1x, /images/portfolio/tablet/banking-app-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                  <source srcset="/images/portfolio/desktop/banking-app-desktop.jpg 1x, /images/portfolio/desktop/banking-app-desktop@2x.jpg 2x" media="(max-width: 1158px)">
+                  <source srcset="./images/portfolio/mobile/banking-app-mobile.jpg 1x, ./images/portfolio/mobile/banking-app-mobile@2x.jpg 2x," media="(max-width: 767px)">
+                  <source srcset="./images/portfolio/tablet/banking-app-tablet.jpg 1x, ./images/portfolio/tablet/banking-app-tablet@2x.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="./images/portfolio/desktop/banking-app-desktop.jpg 1x, ./images/portfolio/desktop/banking-app-desktop@2x.jpg 2x" media="(max-width: 1158px)">
                   <img
                   class="portfolio-list-image"
                   src="./images/portfolio/banking-app-mobile.jpg"
@@ -347,9 +347,9 @@
             <li class="portfolio-list-item">
               <div class="portfilio-overlay">
                 <picture>
-                  <source srcset="/images/portfolio/mobile/cashless-payment-mobile.jpg 1x, /images/portfolio/mobile/cashless-payment-mobile@2x.jpg 2x," media="(max-width: 767px)">
-                  <source srcset="/images/portfolio/tablet/cashless-payment-tablet.jpg 1x, /images/portfolio/tablet/cashless-payment-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                  <source srcset="/images/portfolio/desktop/cashless-payment-desktop.jpg 1x, /images/portfolio/desktop/cashless-payment-desktop@2x.jpg 2x" media="(max-width: 1158px)">
+                  <source srcset="./images/portfolio/mobile/cashless-payment-mobile.jpg 1x, ./images/portfolio/mobile/cashless-payment-mobile@2x.jpg 2x," media="(max-width: 767px)">
+                  <source srcset="./images/portfolio/tablet/cashless-payment-tablet.jpg 1x, ./images/portfolio/tablet/cashless-payment-tablet@2x.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="./images/portfolio/desktop/cashless-payment-desktop.jpg 1x, ./images/portfolio/desktop/cashless-payment-desktop@2x.jpg 2x" media="(max-width: 1158px)">
                 <img
                   class="portfolio-list-image"
                   src="./images/portfolio/cashless-payment-mobile.jpg"
@@ -373,9 +373,9 @@
             <li class="portfolio-list-item">
               <div class="portfilio-overlay">
                 <picture>
-                  <source srcset="/images/portfolio/mobile/meditation-app-mobile.jpg 1x, /images/portfolio/mobile/meditation-app-mobile@2x.jpg 2x," media="(max-width: 767px)">
-                  <source srcset="/images/portfolio/tablet/meditation-app-tablet.jpg 1x, /images/portfolio/tablet/meditation-app-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                  <source srcset="/images/portfolio/desktop/meditation-app-desktop.jpg 1x, /images/portfolio/desktop/meditation-app-desktop@2x.jpg 2x" media="(max-width: 1158px)">
+                  <source srcset="./images/portfolio/mobile/meditation-app-mobile.jpg 1x, ./images/portfolio/mobile/meditation-app-mobile@2x.jpg 2x," media="(max-width: 767px)">
+                  <source srcset="./images/portfolio/tablet/meditation-app-tablet.jpg 1x, ./images/portfolio/tablet/meditation-app-tablet@2x.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="./images/portfolio/desktop/meditation-app-desktop.jpg 1x, ./images/portfolio/desktop/meditation-app-desktop@2x.jpg 2x" media="(max-width: 1158px)">
                 <img
                   class="portfolio-list-image"
                   src="./images/portfolio/meditation-app.jpg"
@@ -399,9 +399,9 @@
             <li class="portfolio-list-item">
               <div class="portfilio-overlay">
                 <picture>
-                  <source srcset="/images/portfolio/mobile/taxi-service-mobile.jpg 1x, /images/portfolio/mobile/taxi-service-mobile@2x.jpg 2x," media="(max-width: 767px)">
-                  <source srcset="/images/portfolio/tablet/taxi-service-tablet.jpg 1x, /images/portfolio/tablet/taxi-service-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                  <source srcset="/images/portfolio/desktop/taxi-service-desktop.jpg 1x, /images/portfolio/desktop/taxi-service-desktop@2x.jpg 2x" media="(max-width: 1158px)">
+                  <source srcset="./images/portfolio/mobile/taxi-service-mobile.jpg 1x, ./images/portfolio/mobile/taxi-service-mobile@2x.jpg 2x," media="(max-width: 767px)">
+                  <source srcset="./images/portfolio/tablet/taxi-service-tablet.jpg 1x, ./images/portfolio/tablet/taxi-service-tablet@2x.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="./images/portfolio/desktop/taxi-service-desktop.jpg 1x, ./images/portfolio/desktop/taxi-service-desktop@2x.jpg 2x" media="(max-width: 1158px)">
                 <img
                   class="portfolio-list-image"
                   src="./images/portfolio/taxi-service-mobile.jpg"
@@ -424,9 +424,9 @@
             <li class="portfolio-list-item">
               <div class="portfilio-overlay">
                 <picture>
-                  <source srcset="/images/portfolio/mobile/screen-illustrations-mobile.jpg 1x, /images/portfolio/mobile/screen-illustrations-mobile@2x.jpg 2x," media="(max-width: 767px)">
-                  <source srcset="/images/portfolio/tablet/screen-illustrations-tablet.jpg 1x, /images/portfolio/tablet/screen-illustrations-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                  <source srcset="/images/portfolio/desktop/screen-illustrations-desktop.jpg 1x, /images/portfolio/desktop/screen-illustrations-desktop@2x.jpg 2x" media="(max-width: 1158px)">
+                  <source srcset="./images/portfolio/mobile/screen-illustrations-mobile.jpg 1x, ./images/portfolio/mobile/screen-illustrations-mobile@2x.jpg 2x," media="(max-width: 767px)">
+                  <source srcset="./images/portfolio/tablet/screen-illustrations-tablet.jpg 1x, ./images/portfolio/tablet/screen-illustrations-tablet@2x.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="./images/portfolio/desktop/screen-illustrations-desktop.jpg 1x, ./images/portfolio/desktop/screen-illustrations-desktop@2x.jpg 2x" media="(max-width: 1158px)">
                 <img
                   class="portfolio-list-image"
                   src="./images/portfolio/screen-illustrations-mobile.jpg"
@@ -453,9 +453,9 @@
             <li class="portfolio-list-item">
               <div class="portfilio-overlay">
                 <picture>
-                  <source srcset="/images/portfolio/mobile/online-courses-mobile.jpg 1x, /images/portfolio/mobile/online-courses-mobile@2x.jpg 2x," media="(max-width: 767px)">
-                  <source srcset="/images/portfolio/tablet/online-courses-tablet.jpg 1x, /images/portfolio/tablet/online-courses-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                  <source srcset="/images/portfolio/desktop/online-courses-desktop.jpg 1x, /images/portfolio/desktop/online-courses-desktop@2x.jpg 2x" media="(max-width: 1158px)">
+                  <source srcset="./images/portfolio/mobile/online-courses-mobile.jpg 1x, ./images/portfolio/mobile/online-courses-mobile@2x.jpg 2x," media="(max-width: 767px)">
+                  <source srcset="./images/portfolio/tablet/online-courses-tablet.jpg 1x, ./images/portfolio/tablet/online-courses-tablet@2x.jpg 2x" media="(min-width: 768px)">
+                  <source srcset="./images/portfolio/desktop/online-courses-desktop.jpg 1x, ./images/portfolio/desktop/online-courses-desktop@2x.jpg 2x" media="(max-width: 1158px)">
                 <img
                   class="portfolio-list-image"
                   src="./images/portfolio/online-courses-mobile.jpg"
