--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
     </div>
 
     <!--mobile-menu-->
-    <div class="mobile-menu">
+    <div class="mobile-menu is-open">
       <div class="container mobile-menu-container">
         <button class="mobile-menu-close-button">
           <svg class="mobile-menu-close-button-cross" width="8" height="8">
@@ -668,7 +668,7 @@
           <ul class="mobile-address-list">
             <li>
               <li>
-                <a class="mobile-address-list-link" href="tel:+110001111111"
+                <a class="mobile-address-list-link-number" href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
                 >
               </li>
